--- a/GraphQlLibary.Web/ClientApp/src/app/createPost/createPost.component.html
+++ b/GraphQlLibary.Web/ClientApp/src/app/createPost/createPost.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="profileForm" enctype="multipart/form-data" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <label class="control-label">Photo</label>
-    <input type="file" formControlName="file" class="form-control" />
-  </div>
-  <!--<div class="form-group">
     <label class="control-label">First Name:</label>
-    <input type="text" formControlName="description" class="form-control">    
-  </div>-->
+    <input type="text" formControlName="description" class="form-control">
+  </div>
+  <div class="form-group">
+    <label class="control-label">File:</label>
+    <input sclass="form-control" type="file" name="file" (change)="postMethod($event.target.files)">
+  </div>
   <div class="form-group">
     <input type="submit" value="Create" class="btn btn-primary" />
   </div>
