--- a/GraphQlLibary.Web/ClientApp/src/app/login/login.component.html
+++ b/GraphQlLibary.Web/ClientApp/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm"(ngSubmit)="onSubmit()">
+<form [formGroup]="profileForm"(ngSubmit)="onSubmit()">
   <div class="form-group">
     <label class="control-label">Email</label>
     <input type="email" formControlName="email" class="form-control" />
